[gd_scene load_steps=5 format=3 uid="uid://cuow1rmg4m25y"]

[ext_resource type="FontFile" uid="uid://b8ytcrcf5unmr" path="res://ofont.ru_Bad Comic.ttf" id="1_ka3kt"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_lwpcf"]
[ext_resource type="Texture2D" uid="uid://s6dcww4kk6ta" path="res://textures/диалоговое_окно.png" id="2_4wqxi"]

[sub_resource type="Theme" id="Theme_gunml"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwpcf")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 140.0
offset_right = 1467.0
offset_bottom = 308.0
scale = Vector2(0.468752, 0.484186)
theme = SubResource("Theme_gunml")
theme_override_colors/font_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_focus_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_disabled_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/icon_normal_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_disabled_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_fonts/font = ExtResource("1_ka3kt")
theme_override_font_sizes/font_size = 48
text = "play"
icon = ExtResource("2_4wqxi")
icon_alignment = 1

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 295.0
offset_right = 1467.0
offset_bottom = 463.0
scale = Vector2(0.468752, 0.484186)
theme = SubResource("Theme_gunml")
theme_override_colors/font_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_focus_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_disabled_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/icon_normal_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_disabled_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_fonts/font = ExtResource("1_ka3kt")
theme_override_font_sizes/font_size = 48
text = "setting"
icon = ExtResource("2_4wqxi")
icon_alignment = 1

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 468.0
offset_right = 1467.0
offset_bottom = 636.0
scale = Vector2(0.468752, 0.484186)
theme = SubResource("Theme_gunml")
theme_override_colors/font_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_focus_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_disabled_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0.721569, 0.6, 0.239216, 1)
theme_override_colors/icon_normal_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_colors/icon_disabled_color = Color(0.301961, 0.172549, 0.0901961, 1)
theme_override_fonts/font = ExtResource("1_ka3kt")
theme_override_font_sizes/font_size = 48
text = "quit"
icon = ExtResource("2_4wqxi")
icon_alignment = 1

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="Button3" to="." method="_on_button_3_button_up"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
